--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Profile Card</title>
+    <title>Mujahid Raj's Profile card</title>
     <link rel="stylesheet" href="body.css">
     <link rel="stylesheet" href="buttons.css">
     <link rel="stylesheet" href="left-div.css">
