--- a/MY CV TEMPLATE (HTML,CSS)/index.html
+++ b/MY CV TEMPLATE (HTML,CSS)/index.html
@@ -113,6 +113,8 @@
                     <li>Microsoft Office (Word, Excel, PowerPoint, Access)</li>
                     <li>UI/UX Design (Figma, Canva)</li>
                     <li>Basic Knowledge of Accounting</li>
+                    <li>Basic Knowledge of Computer Hardware</li>
+                    <li>Data entry</li>
                 </ul>
             </div>
             
@@ -121,6 +123,18 @@
             <div class="details">
                 <h2 style=" color: #d6d6d6;"><i class="fas fa-folder"></i> Personal/Dummy Projects</h2>
                 <ul>
+                    <li>Personal Site (HTML, CSS, JavaScript) - <a
+                        href="https://mujahidraj.github.io/Personal-Site/">Link</a></li>
+                        <li>Number System Converter (HTML, CSS, JavaScript) - <a
+                            href="https://mujahidraj.github.io/Number-System-converter/">Link</a></li>
+                            <li>Educational Games (HTML, CSS, JavaScript) - <a
+                                href="https://mujahidraj.github.io/games/">Link</a></li>
+                                <li>Health Tracker (HTML, CSS, JavaScript) - <a
+                                    href="https://mujahidraj.github.io/Health-Tracker/">Link</a></li>
+                                    <li>TechWisdom Student NextJs (HTML, CSS, JavaScript) - <a
+                                        href="https://github.com/mujahidraj/TechWisdom-Student-NextJs">Link</a></li>
+                    <li>TechWisdom Admin NextJs (HTML, CSS, JavaScript) - <a
+                        href="https://github.com/mujahidraj/TechWisdom-Admin-NextJs">Link</a></li>
                     <li>Organ Donation System (HTML, PHP, CSS, JavaScript) - <a
                             href="https://github.com/mujahidraj/organ-donation-system">Link</a></li>
                     <li>KHOJ Search Engine (JAVA, C#) - <a
@@ -242,16 +256,20 @@
             <div class="section">
                 <h2><i class="fas fa-certificate"></i> Certifications</h2>
                 <ul>
-                    <li>Introduction to C# - Udemy (2019)</li>
-                    <li>Introduction to Computer System – CISCO (2018)</li>
-                    <li>Certificate de Computer Hardware – Edx (2019)</li>
-                    <li>PHP Expert – Pluralsight (2021)</li>
-                    <li>English Learning – Nazim’s English (2021)</li>
+                    <li>JavaScript Workshop for Absolute Beginners - Issued by: IBM SkillBuild</li>
+                    <li>Getting Started with Microsoft PowerPoint – Issued by: Coursera Project Network</li>
+                    <li>Certificate in Web development fundamentals – Issued by: IBM SkillBuild</li>
+                    <li>Build a free website with WordPress – Issued by: Coursera Project Network</li>
+                    <li>Basic of Degital Marketing – Issued by: Ostad</li>
                     <li>IT Solution – Cambrian ITC Department (2014)</li>
-                    <li>Web development - Coursera (2022)</li>
-                    <li>HTML/CSS - SuperSimpleDev (2023)</li>
-                    <li>NestJs - FreeCodeCamp(2024)</li>
-                    <li>NextJs - CodewithMosh (2024)</li>
+                    <li>Computer hardware Basics - Issued by: Cisco Networking Academy</li>
+                    <li>Fundamentals of Data Science - Issued by: Ostad</li>
+                    <li>Getting Started with Microsoft Excel - Issued by: Coursera Project Network</li>
+                    <li>NextJs - CodewithMosh</li>
+                    <li>NestJs - FreeCodeCamp</li>
+                    <li>Learn Programming with JavaScript - Issued by: Openclassrooms</li>
+                    <li>IT Essentials: PC Hardware and Software - Issued by: Cisco Networking Academy</li>
+                    <li>JavaScript Workshop for Absolute Beginners - Issued by: Ostad</li>
                 </ul>
                 <div class="social-button">
                     <div class="social-buttons">
@@ -292,6 +310,13 @@
                     <li>Programming</li>
                 </ul>
             </div>
+
+            <div class="section">
+                <h2><i class="fas fa-heart"></i> Personal Statement</h2>
+                <p>A passionate and detail-oriented Web Developer and Data Science student with a strong foundation in front-end and back-end technologies, including HTML, CSS, JavaScript, PHP, and SQL, alongside proficiency in Python and machine learning. Experienced in developing responsive and user-friendly web applications, with a keen interest in data-driven decision-making, AI, and analytics. Adept at problem-solving, algorithm optimization, and building scalable solutions. Seeking opportunities to apply my skills in web development and data science, contributing to innovative projects while expanding my expertise in the field.</p>
+            </div>
+
+
             <hr>
             <h2 style="     color: #1c80d7;
 "><i class="fas fa-users"></i> References</h2>
