CV Download Option Added

--- a/MY PORTFOLIO TEMPLATE (HTML CSS)/index.html
+++ b/MY PORTFOLIO TEMPLATE (HTML CSS)/index.html
@@ -27,6 +27,16 @@
             <div class="profile-name">
                 <p>Moizuddin Mohammad Mujahid Rashid (RAJ)</p>
             </div>
+
+            <div class="dropdown">
+                <button class="dropbtn">Download Resume ⬇</button>
+                <div class="dropdown-content">
+                    <a href="CV/Mujahid Raj CV Original.pdf" download>📄 PDF File</a>
+                    <a href="CV/Mujahid Raj CV Original.docx" download>📝 Word File</a>
+                    <a href="CV/Mujahid Raj CV Image.jpg" download>🖼️ Image File</a>
+                </div>
+            </div>
+
             <div class="publisher">
                 <i class="fa-solid fa-at"></i>
                 <div class="publisher-name">
@@ -405,10 +415,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="download-resume">
-                    <button class="download-button">
-                        <i class="fa-solid fa-download"> Download Resume</i></button>
-                </div>
+              
                 
             </div>
 
