--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
                 <button class="cv-button"><a style="color:white; text-decoration: solid;" href="MY CV TEMPLATE (HTML,CSS)/index.html">CV</a></button>
                 <button class="blogs-button"><a style="color:white; text-decoration: solid;" href="My Blogs/index.html">Blogs</a></button>
             </div>
+            <div class="dropdown">
+                <button class="dropbtn">Download Resume</button>
+                <div class="dropdown-content">
+                    <a href="CV/Mujahid Raj CV Original.pdf" download>📄 PDF File</a>
+                    <a href="CV/Mujahid Raj CV Original.docx" download>📝 Word File</a>
+                    <a href="CV/Mujahid Raj CV Image.jpg" download>🖼️ Image File</a>
+                </div>
+            </div>
             <button class="hire-me-button">Hire Me</button>
+           
         </div>
     </div>
 </body>
