--- a/MY CV TEMPLATE (HTML,CSS)/index.html
+++ b/MY CV TEMPLATE (HTML,CSS)/index.html
@@ -25,7 +25,7 @@
         <h1>Moizuddin Mohammad Mujahid Rashid (RAJ)</h1>
         
         <p>Software Engineer & Web developer</p>
-        <p>Curriculum Vitae</p>
+        <p>Personal Details</p>
         
         <div class="dropdown">
             <button class="dropbtn">Download CV ⬇</button>
