--- a/MY CV TEMPLATE (HTML,CSS)/index.html
+++ b/MY CV TEMPLATE (HTML,CSS)/index.html
@@ -54,7 +54,6 @@
                 <h2 style=" color: #d6d6d6;"><i class="fas fa-user"></i> Personal Details</h2>
                 <p><strong>Date of Birth:</strong> October 18, 2002</p>
                 <p><strong>Present Address:</strong> AIUB Road, Kuratoi, Kuril Bisso Road, Kuril, Dhaka-1216</p>
-                <p><strong>Permanent Address:</strong> 412/B, City College Road, Rajarhata, Rajshahi – 6000</p>
                 <p><strong>Blood Group:</strong> B+ </p>
             </div>
             <div class="social-button">
@@ -189,9 +188,7 @@
 
             <div class="section">
                 <h2><i class="fas fa-bullseye"></i> Objective</h2>
-                <p>Dedicated and results-oriented software engineer with expertise in HTML, PHP, CSS, JavaScript, TypeScript, ReactJs, Node.js, JavaScript, NextJs, NestJs, Tailwind, Bootstrap, Postgres, MySQL and many more. Proven track record of delivering innovative solutions and
-                    driving project success. Seeking to leverage technical skills and experience to contribute to
-                    dynamic projects.</p>
+                <p>Dedicated and results-oriented software engineer and data science student with expertise in HTML, PHP, CSS, JavaScript, TypeScript, ReactJs, Node.js, NextJs, NestJs, Tailwind, Bootstrap, Postgres, MySQL, and many more. Proficient in data science techniques, including machine learning, data visualization, statistical analysis, and predictive modeling using Python, Pandas, NumPy, Scikit-Learn, and TensorFlow. Passionate about leveraging data-driven insights to build intelligent applications, optimize decision-making, and drive innovation. Proven track record of delivering successful projects by combining software development expertise with analytical problem-solving skills. Seeking to contribute technical and data science knowledge to dynamic projects.</p>
             </div>
             <hr>
             <div class="section">
@@ -218,19 +215,10 @@
             <hr>
             <div class="section">
                 <h2><i class="fas fa-suitcase"></i> Work Experience</h2>
-                <div class="job">
-                    <h3>Software Engineer</h3>
-                    <p class="date"><i class="fas fa-calendar"></i> TechWisdom, June 23, 2024 - Present</p>
-                    <ul>
-                        <li>Led the development of web applications using Nextjs, NestJs, and TypeScript, resulting in
-                            streamlined processes and improved efficiency.</li>
-                        <li>Contributed to the implementation of a complex backend system using Node.js and TypeScript,
-                            ensuring scalability and optimal performance.</li>
-                    </ul>
-                </div>
+                
                 <div class="job">
                     <h3>Web Developer</h3>
-                    <p class="date"><i class="fas fa-calendar"></i> Next IT Solutions, February 27, 2023 - June 22, 2024
+                    <p class="date"><i class="fas fa-calendar"></i> FunnelCraft, January 27, 2025 - Present
                     </p>
                     <ul>
                         <li>Enhanced user experience by redesigning the interface of a flagship product using JavaScript
@@ -239,8 +227,8 @@
                 </div>
                 <div class="job">
                     <h3>Intern</h3>
-                    <p class="date"><i class="fas fa-calendar"></i> Next IT Solutions, October 12, 2022 - February 26,
-                        2023</p>
+                    <p class="date"><i class="fas fa-calendar"></i> TexhWisdom Technology Limited, September 12, 2024 - January 26,
+                        2025</p>
                     <ul>
                         <li>Assisted in the development and testing of software applications.</li>
                         <li>Participated in team meetings and collaborated with colleagues on various projects.</li>
@@ -251,7 +239,7 @@
             <div class="section">
                 <h2><i class="fas fa-code"></i> Working Projects</h2>
                 <ul>
-                    <li>Developed a task management application using Laravel and Vue.js, incorporating user
+                    <li>Developed a task management application using Nextjs and Nestjs, incorporating user
                         authentication and real-time updates.</li>
                     <li>Created a personal finance tracker using Node.js and TypeScript, allowing users to categorize
                         expenses and generate reports.</li>
@@ -329,13 +317,13 @@
 "><i class="fas fa-users"></i> References</h2>
             <div class="section-reference">
 
-                <div class="reference-1"> <strong>MD. Al Amin</strong> - Assistant Professor, Faculty of Computer
+                <div class="reference-1"> <strong>Mohammad X</strong> - Assistant Professor, Faculty of Computer
                     Science, American
-                    International University-Bangladesh - Email: mdalamini10@hotmail.com - Phone: 01715049317
+                    International University-Bangladesh - Email: mdx10@hotmail.com - Phone: 01234567890
                 </div>
                 <div class="reference-2">
-                    <strong>Abdullah Shafi</strong> - Lecturer, Faculty of Information Technologies, American
-                    International University-bangladesh - Email: Shafi@gmail.com - Phone: 01747868543
+                    <strong>Mohammad Y</strong> - Lecturer, Faculty of Information Technologies, American
+                    International University-bangladesh - Email: mdy@gmail.com - Phone: 09876543210
                 </div>
             </div>
         </div>
