--- a/contact/index.html
+++ b/contact/index.html
@@ -18,14 +18,14 @@
            
             <div class="contact-info">
                 
-                <p>LET'S TALK ABOUT YOUR PROJECT</p>
+                <p>LET'S GET TO KNOW EACH OTHER BEFORE WORK</p>
                 <div class="info-details">
                     <p><i class="fa-solid fa-mobile-screen-button"></i> +880796059406</p>
                     <p><i class="fa-solid fa-envelope"></i>mujahidraj65@gmail.com</p>
                     <p><i class="fa-solid fa-envelope"></i>techwisdom@gmail.com</p>
-                    <p><i class="fa-solid fa-globe"></i>mujahidraj65</p> 
+                    <p><i class="fa-solid fa-globe"></i> <a href="https://mujahidraj.github.io/Personal-Site/">Personal Site</a></p> 
                     <p><i class="fas fa-map-marker-alt"></i>Kuratoli, Kuril Biswo Road, Kuril, Khilkhet, Dhaka, Bangladesh</p>
-                    <p><i class="fas fa-phone"></i></i>0970537869</p>
+                    <p><i class="fas fa-phone"></i></i>01796059406</p>
                     <p><i class="fa-solid fa-building"></i></i>TechWisdom</p>
                 </div>
                 <div class="social-icons">
