--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
         <div class="profile-content">
             <h1>Moizuddin Mohammad Mujahid Rashid</h1>
             <p class="username">mujahidraj65@gmail.com</p>
-            <p class="description">I'm a Front End Developer and UI/UX Designer. Click to see my works, contact information, blogs and CV.</p>
+            <p class="description">I'm a Web Developer, Wordpress Deisgner, UI/UX Designer and AI driven web Application developer. Click to see my works, contact information, blogs and My Personal details.You can download my Resume .</p>
             <div class="profile-stats">
                 <div>
-                    <span>20</span>
+                    <span>24</span>
                     <small>Designs</small>
                 </div>
                 <div>
-                    <span>82</span>
+                    <span>18</span>
                     <small>Projects</small>
                 </div>
                 <div>
-                    <span>32</span>
+                    <span>04</span>
                     <small>Blogs</small>
                 </div>
             </div>
             <div class="button-container">
                 <button class="follow-button"><a style="color:white; text-decoration: solid;" href="contact/index.html">Contact</a></button>
                 <button class="portfolio-button"><a style="color:white; text-decoration: solid;" href="MY PORTFOLIO TEMPLATE (HTML CSS)/index.html">Portfolio</a></button>
-                <button class="cv-button"><a style="color:white; text-decoration: solid;" href="MY CV TEMPLATE (HTML,CSS)/index.html">CV</a></button>
+                <button class="cv-button"><a style="color:white; text-decoration: solid;" href="MY CV TEMPLATE (HTML,CSS)/index.html">P.Details</a></button>
                 <button class="blogs-button"><a style="color:white; text-decoration: solid;" href="My Blogs/index.html">Blogs</a></button>
             </div>
             <div class="dropdown">
