--- a/MY CV TEMPLATE (HTML,CSS)/index.html
+++ b/MY CV TEMPLATE (HTML,CSS)/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="sidebar.css">
+    <link rel="stylesheet" href="animation.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +22,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>Moizuddin Mohammad Mujahid Rashid (RAJ)</h1>
         
         <p>Software Engineer & Web developer</p>
@@ -73,43 +74,43 @@
                 <h2 style=" color: #d6d6d6;"><i class="fas fa-asterisk"></i> Skills</h2>
                 <p>Figma, Canva</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 95%;">95%</div>
+                    <div class="skill-level" data-width="95%">95%</div>
                 </div>
                 <p>C Programming , C++</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 85%;">85%</div>
+                    <div class="skill-level" data-width="85%">85%</div>
                 </div>
                 <p>HTML, CSS3</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 90%;">90%</div>
+                    <div class="skill-level" data-width="90%">90%</div>
                 </div>
                 <p>Tailwind</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 80%;">80%</div>
+                    <div class="skill-level" data-width="80%">80%</div>
                 </div>
                 <p>Bootstrap</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 70%;">70%</div>
+                    <div class="skill-level" data-width="70%">70%</div>
                 </div>
                 <p> JavaScript, TypeScript</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 80%;">80%</div>
+                    <div class="skill-level" data-width="80%">80%</div>
                 </div>
                 <p>NestJs</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 70%;">70%</div>
+                    <div class="skill-level" data-width="70%">70%</div>
                 </div>
                 <p>NesXJs, React</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 75%;">75%</div>
+                    <div class="skill-level" data-width="75%">75%</div>
                 </div>
                 <p> Node.js</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 60%;">60%</div>
+                    <div class="skill-level" data-width="60%">60%</div>
                 </div>
                 <p>MySQL, Postgres , Oracle , MicrosoftSQL</p>
                 <div class="skill-bar">
-                    <div class="skill-level" style="width: 73%;">73%</div>
+                    <div class="skill-level" data-width="73%">73%</div>
                 </div>
             </div>
             <hr>
@@ -167,19 +168,19 @@
                 <h2 style=" color: #d6d6d6;"><i class="fas fa-globe"></i> Languages</h2>
                 <p>Bangla (Native)</p>
                 <div class="language-bar">
-                    <div class="language-level" style="width: 100%;"></div>
+                    <div class="language-level" data-width="100%"></div>
                 </div>
                 <p>English (B2)</p>
                 <div class="language-bar">
-                    <div class="language-level" style="width: 70%;"></div>
+                    <div class="language-level" data-width="70%"></div>
                 </div>
                 <p>Hindi</p>
                 <div class="language-bar">
-                    <div class="language-level" style="width: 50%;"></div>
+                    <div class="language-level" data-width="50%"></div>
                 </div>
                 <p>Urdu</p>
                 <div class="language-bar">
-                    <div class="language-level" style="width: 30%;"></div>
+                    <div class="language-level" data-width="30%"></div>
                 </div>
             </div>
         </div>
@@ -196,7 +197,7 @@
                 <div class="education">
                     <h3>Bachelor of Science in Computer Science - 2025</h3>
                     <p class="date"><i class="fas fa-calendar"></i> American International University-Bangladesh</p>
-                    <p style="color: #626262;"><i class="fa-solid fa-book"></i> Major In Information Technologies</p>
+                    <p style="color: #979797;"><i class="fa-solid fa-book"></i> Major In Information Technologies</p>
                     <p> <i class="fa-solid fa-graduation-cap"></i> CGPA: 3.70</p>
                 </div>
                 <div class="education">
@@ -343,6 +344,15 @@
         <p>&copy; 2023 Moizuddin Mohammad Mujahid Rashid. All rights reserved.</p>
        
     </footer>
+<button class="dark-mode-toggle" id="darkModeToggle">
+    <i class="fas fa-moon"></i> 
+</button>
+
+<div class="back-to-top" id="backToTop">
+    <i class="fas fa-arrow-up"></i>
+</div>
+
+<script src="dynamic.js"></script>
 </body>
 
 </html>
