--- a/MY PORTFOLIO TEMPLATE (HTML CSS)/index.html
+++ b/MY PORTFOLIO TEMPLATE (HTML CSS)/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="dark-mode.css">
     <link rel="stylesheet" href="animations.css">
     <link rel="stylesheet" href="dynamic.css">
+    <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
@@ -32,6 +33,15 @@
 </head>
 
 <body>
+    <header class="portfolio-header">
+        <div class="header-content">
+            <h1 class="header-title animate__animated animate__fadeInDown">Mujahid's Portfolio</h1>
+            <p class="header-subtitle animate__animated animate__fadeInUp">Mujahid - Web Developer and Wordpress web Designer</p>
+           
+        </div>
+        
+    </header>
+
     <main class="main-div">
 
         <div class="sidebar">
@@ -93,7 +103,7 @@
         <div class="main-section">
             <div class="main-heading">
                 <div class="heading">
-                    <p>My Portfolio</p>
+                    <p></p>
                 </div>
                 <div class="filter-option">
                     <div class="filter-text">
