--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="left-div.css">
     <link rel="stylesheet" href="profile.css">
     <link rel="stylesheet" href="dark-mode.css">
+    <link rel="stylesheet" href="responsive.css">
     <script src="https://kit.fontawesome.com/a2c1bb72d8.js" crossorigin="anonymous"></script>
 </head>
 <body>
