--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </div>
             <div class="button-container">
                 <button class="follow-button"><a style="color:white; text-decoration: solid;" href="contact/index.html">Contact</a></button>
-                <button class="portfolio-button"><a style="color:white; text-decoration: solid;" href="MY PORTFOLIO TEMPLATE (HTML CSS)/index.html">Portfolio</a></button>
-                <button class="cv-button"><a style="color:white; text-decoration: solid;" href="MY CV TEMPLATE (HTML,CSS)/index.html">P.Details</a></button>
+                <button class="portfolio-button"><a style="color:white; text-decoration: solid;" href="Portfolio/index.html">Portfolio</a></button>
+                <button class="cv-button"><a style="color:white; text-decoration: solid;" href="CV/index.html">P.Details</a></button>
                 <button class="blogs-button"><a style="color:white; text-decoration: solid;" href="My Blogs/index.html">Blogs</a></button>
             </div>
             <div class="dropdown">
