--- a/CV/index.html
+++ b/CV/index.html
@@ -7,7 +7,13 @@
     <title>Moizuddin Mohammad Mujahid Rashid CV</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/timeline.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -21,7 +27,7 @@
         </div>
         <div class="header-content">
             <div class="profile-image">
-                <img src="images/3.jpg" alt="Profile Picture">
+                <img src="images/4.jpg" alt="Profile Picture">
             </div>
             <div class="header-text">
                 <h1>Moizuddin Mohammad Mujahid Rashid (RAJ)</h1>
@@ -131,8 +137,8 @@
                     <div class="skill-item">
                         <p>Figma, Canva</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="95"></div>
-                            <span class="progress-text">95%</span>
+                            <div class="progress" data-width="90"></div>
+                            <span class="progress-text">90%</span>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -152,15 +158,15 @@
                     <div class="skill-item">
                         <p>Tailwind</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="80"></div>
-                            <span class="progress-text">80%</span>
+                            <div class="progress" data-width="75"></div>
+                            <span class="progress-text">75%</span>
                         </div>
                     </div>
                     <div class="skill-item">
                         <p>Bootstrap</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="70"></div>
-                            <span class="progress-text">70%</span>
+                            <div class="progress" data-width="60"></div>
+                            <span class="progress-text">60%</span>
                         </div>
                     </div>
                     <div class="skill-item">
@@ -192,18 +198,26 @@
                         </div>
                     </div>
                     <div class="skill-item">
-                        <p>MySQL, Postgres, Oracle, MicrosoftSQL</p>
+                        <p>MySQL, MicrosoftSQL</p>
                         <div class="progress-bar">
                             <div class="progress" data-width="73"></div>
                             <span class="progress-text">73%</span>
                         </div>
                     </div>
+                    <div class="skill-item">
+                        <p>Postgres,Oracle</p>
+                        <div class="progress-bar">
+                            <div class="progress" data-width="80"></div>
+                            <span class="progress-text">80%</span>
+                        </div>
+                    </div>
+                   
                 </div>
 
                 <h3>Basic Skills</h3>
                 <div class="basic-skills-grid">
                     <div class="skill-item">
-                        <p>Microsoft Word</p>
+                        <p>Wordpress With Elementor</p>
                         <div class="progress-bar">
                             <div class="progress" data-width="90"></div>
                             <span class="progress-text">90%</span>
@@ -224,31 +238,31 @@
                         </div>
                     </div>
                     <div class="skill-item">
-                        <p>Microsoft Access</p>
+                        <p>Wordpress</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="75"></div>
-                            <span class="progress-text">75%</span>
+                            <div class="progress" data-width="87"></div>
+                            <span class="progress-text">87%</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <p>Google Docs</p>
+                        <p>AI Driven App Development</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="85"></div>
-                            <span class="progress-text">85%</span>
+                            <div class="progress" data-width="70"></div>
+                            <span class="progress-text">70%</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <p>Google Sheets</p>
+                        <p>Data Analysis</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="80"></div>
-                            <span class="progress-text">80%</span>
+                            <div class="progress" data-width="72"></div>
+                            <span class="progress-text">72%</span>
                         </div>
                     </div>
                     <div class="skill-item">
-                        <p>Google Slides</p>
+                        <p>Data Visualization</p>
                         <div class="progress-bar">
-                            <div class="progress" data-width="82"></div>
-                            <span class="progress-text">82%</span>
+                            <div class="progress" data-width="70"></div>
+                            <span class="progress-text">70%</span>
                         </div>
                     </div>
                 </div>
@@ -578,7 +592,10 @@
     <button class="back-to-top" id="backToTop">
         <i class="fas fa-arrow-up"></i>
     </button>
-
+    <button class="theme-toggle" id="themeToggle">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+    </button>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/main.js"></script>
 </body>
