--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mujahid Raj | Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/component.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/modal.css">
+    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="css/sections.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -50,7 +56,8 @@
             <source src="images/background.mp4" type="video/mp4">
         </video>
         <div class="header-content">
-            <h1 class="header-title animate__animated animate__fadeInDown">Mujahid Raj</h1>
+            <img src="images/1.jpg" alt="">
+            <h1 class="header-title animate__animated animate__fadeInDown">Moizuddin Mohammad Mujahid Rashid</h1>
 <p class="header-subtitle animate__animated animate__fadeInUp">Web Developer & UI/UX Designer</p>
             <div class="header-buttons">
                 <a href="#projects" class="btn btn-primary">View Portfolio</a>
@@ -64,7 +71,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="images/1.JPG" alt="Mujahid Raj" class="profile-img">
+                    <img src="images/5.JPG" alt="Mujahid Raj" class="profile-img">
                     <div class="about-img-grid">
                         <img src="images/3.jpg" alt="Work 1">
                         <img src="images/4.jpg" alt="Work 2">
@@ -321,6 +328,10 @@
             </div>
         </div>
     </div>
+    <button class="theme-toggle" id="themeToggle">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+    </button>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/main.js"></script>
 </body>
