--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mujahid Raj's Profile card</title>
-    <link rel="stylesheet" href="body.css">
-    <link rel="stylesheet" href="buttons.css">
-    <link rel="stylesheet" href="left-div.css">
-    <link rel="stylesheet" href="profile.css">
-    <link rel="stylesheet" href="dark-mode.css">
-    <link rel="stylesheet" href="responsive.css">
+    <link rel="stylesheet" href="css/body.css">
+    <link rel="stylesheet" href="css/buttons.css">
+    <link rel="stylesheet" href="css/left-div.css">
+    <link rel="stylesheet" href="css/profile.css">
+    <link rel="stylesheet" href="css/dark-mode.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <script src="https://kit.fontawesome.com/a2c1bb72d8.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="profile-card">
         <div class="left-side">
             <div class="profile-image">
-                <img src="3.jpg" alt="Mujahid Raj">
+                <img src="images/3.jpg" alt="Mujahid Raj">
             </div>
             <div class="company-logo">
-                <img src="1.png" alt="Company Logo">
+                <img src="images/1.png" alt="Company Logo">
             </div>
 
             <div class="social-icons">
