--- a/CV/index.html
+++ b/CV/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="header-text">
                 <h1>Moizuddin Mohammad Mujahid Rashid (RAJ)</h1>
-                <p class="profession">Software Engineer & Web Developer</p>
+                <p class="profession">Web Developer, Wordpress web Designer & UI/UX Designer</p>
                 <div class="header-buttons">
                     <a href="CV/Mujahid Raj CV Original.pdf" download class="download-btn">
                         <i class="fas fa-download"></i> Download CV
@@ -113,7 +113,7 @@
                         <div class="timeline-content">
                             <h3>Higher Secondary Certificate</h3>
                             <h4>Cambrian School and College, Dhaka</h4>
-                            <p>Division: Science</p>
+                            <p>Department: Science</p>
                             <p>GPA: 5.00</p>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                         <div class="timeline-content">
                             <h3>Secondary School Certificate</h3>
                             <h4>Cambrian School and College, Dhaka</h4>
-                            <p>Division: Science</p>
+                            <p>Department: Science</p>
                             <p>GPA: 5.00</p>
                         </div>
                     </div>
