--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -56,9 +56,9 @@
             <source src="images/background.mp4" type="video/mp4">
         </video>
         <div class="header-content">
-            <img src="images/1.jpg" alt="">
+            <img src="images/1.JPG" alt="">
             <h1 class="header-title animate__animated animate__fadeInDown">Moizuddin Mohammad Mujahid Rashid</h1>
-<p class="header-subtitle animate__animated animate__fadeInUp">Web Developer & UI/UX Designer</p>
+<p class="header-subtitle animate__animated animate__fadeInUp">Web Developer, wordpress Web Designer & UI/UX Designer</p>
             <div class="header-buttons">
                 <a href="#projects" class="btn btn-primary">View Portfolio</a>
                 <a href="#contact" class="btn btn-outline">Contact Me</a>
@@ -71,7 +71,7 @@
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="images/5.JPG" alt="Mujahid Raj" class="profile-img">
+                    <img src="images/5.jpg" alt="Mujahid Raj" class="profile-img">
                     <div class="about-img-grid">
                         <img src="images/3.jpg" alt="Work 1">
                         <img src="images/4.jpg" alt="Work 2">
