--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <script src="https://kit.fontawesome.com/a2c1bb72d8.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <video autoplay muted loop id="video-background">
+        <source src="images/background-card.mp4" type="video/mp4">
+    </video>
     <div class="profile-card">
         <div class="left-side">
             <div class="profile-image">
