--- a/My Blogs/index.html
+++ b/My Blogs/index.html
@@ -22,10 +22,10 @@
 
     <header class="video-header">
         <div class="video-background">
-            <video autoplay muted loop>
-                <source src="images/background.mp4" type="video/mp4">
-                <img src="images/headerb.jpg" alt="Header background">
+            <video class="desktop-video" autoplay muted loop playsinline>
+                <source src="images/background-cv.mp4" type="video/mp4">
             </video>
+            <img class="mobile-image" src="images/headera.jpg" alt="Header background">
         </div>
         <div class="header-content">
             <img src="images/5.jpg" alt="">
